# wobsongo-verify

./: devbox.json  main.py  opencode.jsonc  parser.py  pyproject.toml  tech-spec.md
specs/project-scaffold/: ARCHITECTURE.md  PLAN.md
tests/: golden_dataset.csv
tests/adapters/: test_db_sqlite.py
tests/core/: __init__.py  test_agents_pipeline.py
wobsongo/: __init__.py
wobsongo/adapters/: __init__.py  db_sqlite.py  embed_bge.py  llm_openai.py  llm_stub.py
wobsongo/api/: __init__.py  app.py
wobsongo/core/: __init__.py  domain.py  pipeline.py  ports.py
wobsongo/core/agents/: __init__.py  decomposer.py  judge.py
wobsongo/core/services/: __init__.py  ingestion.py
