[project]
name = "wobsongo-verify"
version = "0.1.2"
description = "Generic RAG-based claim verification engine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "litestar>=2.0",
]

[project.optional-dependencies]
embed = ["sentence-transformers>=3.0"]
db    = ["sqlite-vec>=0.1"]
pdf   = ["pymupdf4llm>=0.0.17"]
llm   = ["openai>=1.0"]
docs  = ["mkdocs>=1.6.1", "mkdocs-material>=9.7.1"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "pytest-asyncio>=0.23",
    "uvicorn>=0.30",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"wobsongo/api/app.py" = ["B008"]  # Litestar uses Body() in param defaults by design


[tool.mypy]
strict = true
packages = ["wobsongo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
